--- a/app/templates/admin/admin_login.html
+++ b/app/templates/admin/admin_login.html
@@ -30,10 +30,11 @@
         </nav>
 
         <div class="sidestyle">
-            <center><h1>Welcome</h1>
-            <p>You are 30 seconds away for helping the people to understand the best and suitable soils and crops for their location..!</p><br><hr>
-            <p>Forget Your Password.?</p>
-            <a class="btn btn-danger" href="#">Forget</a></center>
+            <center>
+                <img src="{% static 'image/login5.png' %}" width="300" height="300">
+                <h1>Welcome Back!</h1>
+                <p>You are 30 seconds away for helping the people to understand the best and suitable soils and crops for their location..!</p><br><hr>
+            </center>
         </div>
     
         <div class="container">
