--- a/app/templates/visitor/visitor_login.html
+++ b/app/templates/visitor/visitor_login.html
@@ -30,12 +30,14 @@
         </nav>
 
         <div class="sidestyle">
-            <center><h1>Welcome</h1>
-            <p>You are 30 seconds away for helping the people to understand the best and suitable soils and crops for their location..!</p><br>
-            <p>You don't have account as Visitor.?</p>
-            <a class="btn btn-primary" href="{% url 'visitor_signup' %}">Register</a><br><hr>
-            <p>Forget Your Password.?</p>
-            <a class="btn btn-danger" href="#">Forget</a></center>
+            <center>
+                <img src="{% static 'image/login1.png' %}" width="250" height="300">
+                <h1>Welcome Back!</h1>
+                <p>You don't have account as Visitor.?</p>
+                <a class="btn btn-primary" href="{% url 'visitor_signup' %}">Register</a><br><hr>
+                <p>Forget Your Password.?</p>
+                <a class="btn btn-danger" href="#">Forget</a>
+            </center>
         </div>
     
         <div class="container">
