--- a/app/templates/visitor/visitor_signup.html
+++ b/app/templates/visitor/visitor_signup.html
@@ -30,10 +30,13 @@
         </nav>
 
         <div class="sidestyle">
-            <center><h1>Welcome</h1>
-            <p>You are 30 seconds away for find the suitable Soils and Crops for your locations..!</p><br>
-            <p>Already a Visitor of Agro Smart.?</p>
-            <a class="btn btn-primary" href="{% url 'visitor_login' %}">Login</a></center>
+            <center>
+                <img src="{% static 'image/register1.png' %}" width="350" height="300">
+                <h1>Are You Ready!</h1>
+                <p>You are 30 seconds away for find the suitable Soils and Crops for your locations..!</p><br><hr>
+                <p>Already a Visitor of Agro Smart.?</p>
+                <a class="btn btn-primary" href="{% url 'visitor_login' %}">Login</a>
+            </center>
         </div>
     
         <div class="container">
