--- a/app/static/visitor/visitor_signup.css
+++ b/app/static/visitor/visitor_signup.css
@@ -55,7 +55,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
     margin: 0;
     padding: 0;
     width: 25%;
-    background-color:#f1f1f1;
+    background-color:#fff;
     position: fixed;
     height: 93%;
     overflow: auto;
@@ -64,7 +64,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
 .sidestyle h1{
     font-family: 'Times New Roman', Times, serif;
     align-items: center;
-    padding-top: 150px;
+    padding-top: 20px;
     font-style: bold;
 
 }
