--- a/app/templates/admin/admin_login.html
+++ b/app/templates/admin/admin_login.html
@@ -58,6 +58,7 @@
                 
                 <div class="btn-group float-right">
                     <a href="{% url 'visitor_login' %}" class="btn btn-secondary">Visitor</a>
+                    <a href="{% url 'seller_login' %}" class="btn btn-secondary">Seller</a>
                     <a href="{% url 'officer_login' %}" class="btn btn-secondary">Officer</a>
                     <a href="{% url 'admin_login' %}" class="btn btn-primary">Admin</a>
                 </div>
