--- a/app/templates/officer/officer_signup.html
+++ b/app/templates/officer/officer_signup.html
@@ -30,10 +30,13 @@
         </nav>
 
         <div class="sidestyle">
-            <center><h1>Welcome</h1>
-            <p>You are 30 seconds away for helping the people to understand the best and suitable soils and crops for their location..!</p><br>
-            <p>Already an Officer of Agro Smart.?</p>
-            <a class="btn btn-primary" href="{% url 'officer_login' %}">Login</a></center>
+            <center>
+                <img src="{% static 'image/register2.png' %}" width="350" height="300">
+                <h1>Are You Ready!</h1>
+                <p>You are 30 seconds away for helping the people to understand the best and suitable soils and crops for their location..!</p><br><hr>
+                <p>Already an Officer of Agro Smart.?</p>
+                <a class="btn btn-primary" href="{% url 'officer_login' %}">Login</a>
+            </center>
         </div>
     
         <div class="container">
