--- a/app/templates/seller/seller_signup.html
+++ b/app/templates/seller/seller_signup.html
@@ -30,10 +30,13 @@
         </nav>
 
         <div class="sidestyle">
-            <center><h1>Welcome</h1>
-            <p>Seller your organic vegitables, fruits, seeds etc. with good price..!</p><br>
-            <p>Already have a Garden.?</p>
-            <a class="btn btn-primary" href="{% url 'visitor_login' %}">Login</a></center>
+            <center>
+                <img src="{% static 'image/register3.png' %}" width="350" height="300">
+                <h1>Are You Ready!</h1>
+                <p>Sell your organic vegitables, fruits, seeds etc. with good price..!</p><br><hr>
+                <p>Already have a Garden.?</p>
+                <a class="btn btn-primary" href="{% url 'visitor_login' %}">Login</a>
+            </center>
         </div>
     
         <div class="container">
