--- a/app/templates/officer/officer_login.html
+++ b/app/templates/officer/officer_login.html
@@ -61,6 +61,7 @@
                 
                 <div class="btn-group float-right">
                     <a href="{% url 'visitor_login' %}" class="btn btn-secondary">Visitor</a>
+                    <a href="{% url 'seller_login' %}" class="btn btn-secondary">Seller</a>
                     <a href="{% url 'officer_login' %}" class="btn btn-primary">Officer</a>
                     <a href="{% url 'admin_login' %}" class="btn btn-secondary">Admin</a>
                 </div>
