--- a/app/templates/admin/admin_home.html
+++ b/app/templates/admin/admin_home.html
@@ -31,10 +31,6 @@
         <a href="{% url 'admin_active_seller' %}"><i class="fas fa-users"></i>Manage Seller</a>
         <a href="{% url 'admin_active_officer' %}"><i class="fas fa-user-tie"></i>Manage Officer</a>
         <a href="{% url 'admin_active_admin' %}"><i class="fas fa-user-shield"></i>Manage Admin</a>
-        <a href="{% url 'admin_active_soil' %}"><i class="fas fa-seedling"></i>Manage Soil in Location</a>
-        <a href="{% url 'admin_active_soil_detail' %}"><i class="fas fa-seedling"></i>Manage Detail of Soil</a>
-        <a href="{% url 'admin_active_rainfall' %}"><i class="fas fa-cloud-showers-heavy"></i>Manage Rainfall</a>
-        <a href="{% url 'admin_active_crop' %}"><i class="fas fa-seedling"></i>Manage Crop</a>
 
         <div class="logout">
             <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
@@ -82,7 +78,7 @@
                         <div class="card-body">
                         <h5 class="card-title"><i class="fas fa-seedling"></i><U><b>Approve Soil</b></U></h5>
                         <p class="card-text"><b>Visitors are waiting for approval for there Contribution in Soils...</b></p>
-                        <a href="{% url 'admin_approve_soil' %}" class="btn btn-outline-dark"><b>Go There</b></a>
+                        <a href=# class="btn btn-outline-dark"><b>Go There</b></a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +89,7 @@
                         <div class="card-body">
                         <h5 class="card-title"><i class="fas fa-cloud-showers-heavy"></i><U><b>Approve Crop</b></U></h5>
                         <p class="card-text"><b>Visitors are waiting for approval for there Contribution in Crop...</b></p>
-                        <a href="{% url 'admin_approve_crop' %}" class="btn btn-outline-dark"><b>Go There</b></a>
+                        <a href=# class="btn btn-outline-dark"><b>Go There</b></a>
                         </div>
                     </div>
                 </div>
