--- a/app/templates/seller/product.html
+++ b/app/templates/seller/product.html
@@ -16,27 +16,24 @@
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">SL NO.</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Username</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">District</th>
-                    <th scope="col">Joining Date</th>
-                    <th scope="col">Delete Admin</th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Total Qunatity</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Add On</th>
+                    <th scope="col">Know More</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- {% for a in admins %} -->
+                {% for p in products %}
                 <tr>
-                    <!-- <th>{{ forloop.counter }}</th> -->
-                    <!-- <td>{{a.get_name}}</td> -->
-                    <!-- <td>{{a.get_username}}</td> -->
-                    <!-- <td>{{a.email}}</td> -->
-                    <!-- <td>{{a.gender}}</td> -->
-                    <!-- <td>{{a.district}}</td> -->
-                    <!-- <td>{{a.joindate}}</td> -->
+                    <th>{{ forloop.counter }}</th>
+                    <td>{{p.product_name}}</td>
+                    <td>{{p.total_quantity}} {{p.unit}}</td>
+                    <td>{{p.price}} for {{p.price_per_quantity}}</td>
+                    <td>{{p.joindate}}</td>
+                    <td><a class="btn btn-success" href="{% url 'detail_product_seller'  p.id %}">View</a></td>
                 </tr>
-                <!-- {% endfor %} -->
+                {% endfor %}
             </tbody>
         </table>
 
