--- a/app/templates/admin/detail_active_seller.html
+++ b/app/templates/admin/detail_active_seller.html
@@ -50,9 +50,9 @@
                         <td><i>{{sellers.address|linebreaks }}</i></td>
                     </tr>
                     <tr>
-                        <th scope="row">Reject</th>
+                        <th scope="row">Delete</th>
                         <td>:</td>
-                        <td><a class="btn btn-danger" href="{% url 'delete_seller_active' %}?seller_id={{sellers.pk}}">Reject</a></td>
+                        <td><a class="btn btn-danger" href="{% url 'delete_seller_active' %}?seller_id={{sellers.pk}}">Delete</a></td>
                     </tr>
                 </table>
             </div>
