--- a/app/templates/seller/add_product.html
+++ b/app/templates/seller/add_product.html
@@ -27,23 +27,17 @@
                 </div>
     
                 <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">
+                    <div class="form-group col-md-3 mb-0">
                         {{ form.image_1 | as_crispy_field }}
                     </div>
-                    <div class="form-group col-md-4 mb-0">
+                    <div class="form-group col-md-3 mb-0">
                         {{ form.image_2 | as_crispy_field }}
                     </div>
-                    <div class="form-group col-md-4 mb-0">
+                    <div class="form-group col-md-3 mb-0">
                         {{ form.image_3 | as_crispy_field }}
                     </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.total_quantity | as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.unit | as_crispy_field }}
+                    <div class="form-group col-md-3 mb-0">
+                        {{ form.image_4 | as_crispy_field }}
                     </div>
                 </div>
 
