--- a/app/templates/seller/detail_product_seller.html
+++ b/app/templates/seller/detail_product_seller.html
@@ -106,10 +106,11 @@
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  padding: 16px 20px;
+  padding: 10px 10px;
   cursor: pointer;
   width: 100%;
-  margin-bottom:10px;
+  height: 45px;
+  margin-bottom:6px;
   opacity: 0.8;
 }
 
@@ -134,6 +135,7 @@
                 <img class="thumbnail active" src="{{products.image_1.url}}" >
                 <img class="thumbnail" src="{{products.image_2.url}}" >
                 <img class="thumbnail" src="{{products.image_3.url}}" >
+                <img class="thumbnail" src="{{products.image_4.url}}" >
               </div>
               <img id="slideRight" class="arrow" src="{% static 'image/rightarrow.png' %}" >
             </div>
@@ -143,9 +145,21 @@
             <h1 style="text-transform: uppercase; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: left;"><b>{{products.product_name}}</b></h1><hr>
             <h2><b>₹.{{products.price}}/<sub style="font-size: 18px;">{{products.price_per_quantity}}</sub></b></h2><br>
             <p>{{products.describe}}</p>
-            <p>Add on {{products.joindate}}</p><br>
+            <p>Add on {{products.joindate}}</p><hr>
 
-            <a type="button" class="btn btn-outline-warning" onclick="openForm()">Edit Price</a>
+
+            {% if products.status is not True %}<font color='red'><b>Stock is inactive</b></font><br>{% endif %}
+            {% if products.status is True %}<font color='green'><b>Stock is active</b></font><br>{% endif %}
+
+            {% if products.stock is not True %}<font color='red'><b>Product is now Out of stock</b></font>{% endif %}
+            {% if products.stock is True %}<font color='green'><b>Product is now in stock</b></font>{% endif %}<hr>
+
+            <a type="button" class="btn btn-outline-info" style="width: 49%;" onclick="openForm()">Edit Price</a>
+
+            {% if products.stock is True %}<a type="button" class="btn btn-outline-warning" href="{% url 'outofstock' %}?product_id={{products.pk}}" style="width: 49%;">Out of Stock</a><br>{% endif %}
+            {% if products.stock is not True %}<a type="button" class="btn btn-outline-success" href="{% url 'instock' %}?product_id={{products.pk}}" style="width: 49%;">Make Stock Avaliable</a><br>{% endif %}<br>
+
+            <a type="button" class="btn btn-outline-Danger" href="{% url 'delete_product_seller' %}?product_id={{products.pk}}" style="width: 100%;">Delete Product</a>
 
             <div class="form-popup" id="myForm">
               <form action="" method="POST" class="form-container">
