--- a/app/templates/admin/admin_home.html
+++ b/app/templates/admin/admin_home.html
@@ -31,6 +31,7 @@
         <a href="{% url 'admin_active_seller' %}"><i class="fas fa-users"></i>Manage Seller</a>
         <a href="{% url 'admin_active_officer' %}"><i class="fas fa-user-tie"></i>Manage Officer</a>
         <a href="{% url 'admin_active_admin' %}"><i class="fas fa-user-shield"></i>Manage Admin</a>
+        <a href="{% url 'admin_product' %}"><i class="fas fa-user-shield"></i>Manage Product</a>
 
         <div class="logout">
             <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
