--- a/app/templates/seller/add_product.html
+++ b/app/templates/seller/add_product.html
@@ -42,10 +42,13 @@
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group col-md-6 mb-0">
+                    <div class="form-group col-md-4 mb-0">
+                        {{ form.category | as_crispy_field }}
+                    </div>
+                    <div class="form-group col-md-4 mb-0">
                         {{ form.price | as_crispy_field }}
                     </div>
-                    <div class="form-group col-md-6 mb-0">
+                    <div class="form-group col-md-4 mb-0">
                         {{ form.price_per_quantity | as_crispy_field }}
                     </div>
                 </div>
