--- a/app/templates/visitor/visitor_market_home.html
+++ b/app/templates/visitor/visitor_market_home.html
@@ -94,8 +94,8 @@
                 <a href=# class="btn btn-outline-primary">SHOP NOW</a>
             </div>
         </div>
-        
-        <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat" style="">
+
+        <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat" >
             <div class="featured__item">
                 <div class="featured__item__pic set-bg" data-setbg="img/featured/feature-1.jpg" style="background-image: url(&quot;img/featured/feature-1.jpg&quot;);">
                     <ul class="featured__item__pic__hover">
