--- a/app/templates/admin/detail_seller.html
+++ b/app/templates/admin/detail_seller.html
@@ -1,85 +1,60 @@
 {% extends "admin/admin_home.html" %}
 {% block content %}
 
+<style>
+
+    .content-wrapper{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .column{
+      width: 500px;
+      padding: 10px;
+    }
+
+    img.featured{
+    width: 450px;
+    height: 450px;
+    object-fit: cover;
+    cursor: pointer;
+    border-radius: 5px;
+    padding-top: 20px;
+  }
+
+</style>
+
     <!-- Page content -->
     <div class="content">
-        <h1>{{sellers.garden}}</h1>
-        <div class="row">
-            <div class="card" style="width: 18rem;">
-                <img src="{{sellers.logo.url}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                <h5 class="card-title"><b><u>{{sellers.garden}}</u></b></h5>
+        <div class="content-wrapper">
+            <div class="column">
+                <img src="{{sellers.logo.url}}" class="featured" alt="...">
+                <h3 class="card-title"><b><u>{{sellers.garden}}</u></b></h3>
                 <p class="card-text"><i>{{sellers.describe}}</i></p>
-                </div>
             </div>
-            <div class="row1">
-                <table class="table">
-                    <tr>
-                        <th scope="row">Owner Name</th>
-                        <td>:</td>
-                        <td><i>{{sellers.get_name}}</i></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Username</th>
-                        <td>:</td>
-                        <td><i>{{sellers.user}}</i></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">District</th>
-                        <td>:</td>
-                        <td><i>{{sellers.district}}</i></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Gender</th>
-                        <td>:</td>
-                        <td><i>{{sellers.gender}}</i></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Gender</th>
-                        <td>:</td>
-                        <td><i>{{sellers.joindate}}</i></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Email id</th>
-                        <td>:</td>
-                        <td><i>{{sellers.email}}</i></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Address</th>
-                        <td>:</td>
-                        <td><i>{{sellers.address|linebreaks }}</i></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Approve</th>
-                        <td>:</td>
-                        <td><a class="btn btn-success" href="{% url 'approve_seller' %}?seller_id={{sellers.pk}}">Approve</a></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Reject</th>
-                        <td>:</td>
-                        <td><a class="btn btn-danger" href="{% url 'delete_seller' %}?seller_id={{sellers.pk}}">Reject</a></td>
-                    </tr>
-                </table>
+
+            <div class="column">
+                <h1>{{sellers.garden}}</h1>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <p>Owened by <b>{{sellers.get_name}}</b></p>
+                            <p>Username <b>{{sellers.user}}</b></p>
+                            <p>Email id <b>{{sellers.email}}</b></p>
+                            <p>Gender <b>{{sellers.gender}}</b></p>
+                            <p>District <b>{{sellers.district}}</b></p>
+                        </div>
+                        <div class="col">
+                            <p>Join On <b>{{sellers.joindate}}</b></p>
+                            <p>Address: <b>{{sellers.address|linebreaks}}</b></p>
+                        </div>
+                    </div>
+                </div><hr>
+                <a type="button" class="btn btn-outline-Success" href="{% url 'approve_seller' %}?seller_id={{sellers.pk}}" style="width: 100%;">Approve Seller</a><br> <br>
+                <a type="button" class="btn btn-outline-Danger" href="{% url 'delete_seller' %}?seller_id={{sellers.pk}}" style="width: 100%;">Reject Seller</a>
             </div>
         </div>
     </div>
-
-    <style>
-        .row{
-            padding-left: 20px;   
-        }
-        
-        .row1{
-            padding-left: 30px;
-        }
-
-        .table tr , .table th, .table td{
-            border: none;
-            padding-left: 30px;
-            text-align: left;
-            font-size: 24px;
-            padding-top: 30px;
-        }
-    </style>
 
 {% endblock %}
