--- a/app/templates/visitor/visitor_market_home.html
+++ b/app/templates/visitor/visitor_market_home.html
@@ -30,6 +30,7 @@
         <a href="{% url 'visitor_market_home' %}"><i class="fas fa-home"></i>Home</a>
         <a href="{% url 'search' %}"><i class="fas fa-home"></i>Search</a>
         <a href="{% url 'cart' %}"><i class="fas fa-home"></i>Cart</a>
+        <a href="{% url 'your_order' %}"><i class="fas fa-home"></i>Your Order</a>
 
         <div class="logout">
             <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
