--- a/app/templates/seller/seller_home.html
+++ b/app/templates/seller/seller_home.html
@@ -27,7 +27,7 @@
         <a href="{% url 'seller_home' %}"><i class="fas fa-home"></i>Home</a>
         <a href=#><i class="fas fa-home"></i>Profile</a>
         <a href="{% url 'product' %}"><i class="fas fa-home"></i>Product</a>
-        <a href=#><i class="fas fa-home"></i>New Order</a>
+        <a href="{% url 'new_order_seller' %}"><i class="fas fa-home"></i>New Order</a>
         <a href=#><i class="fas fa-home"></i>Shipped Order</a>
         <a href=#><i class="fas fa-home"></i>Delivered Order</a>
         <a href=#><i class="fas fa-home"></i>Canceled Order</a>
