--- a/app/templates/visitor/visitor_market_home.html
+++ b/app/templates/visitor/visitor_market_home.html
@@ -29,8 +29,9 @@
     <div class="sidebar">
         <a href="{% url 'visitor_market_home' %}"><i class="fas fa-home"></i>Home</a>
         <a href="{% url 'search' %}"><i class="fas fa-home"></i>Search</a>
-        <a href="{% url 'cart' %}"><i class="fas fa-home"></i>Cart</a>
-        <a href="{% url 'your_order' %}"><i class="fas fa-home"></i>Your Order</a>
+        <a href="{% url 'cart' %}"><i class="fas fa-home"></i>Cart<span class="badge badge-pill badge-danger" style="float: right; font-size:0.9rem;">{{ cart_count }}</span></a>
+        <a href="{% url 'pending_order' %}"><i class="fas fa-home"></i>Pending Order<span class="badge badge-pill badge-danger" style="float: right; font-size:0.9rem;">{{ order_count }}</span></a>
+        <a href="{% url 'your_order' %}"><i class="fas fa-home"></i>Your Order<span class="badge badge-pill badge-danger" style="float: right; font-size:0.9rem;">{{ pay_count }}</span></a>
 
         <div class="logout">
             <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
